# ignite-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client_configuration.rs  data_router.rs  end_point.rs  ignite_cache.rs  ignite_client.rs  ignite_configuration.rs  ignite_error.rs  lib.rs  protocol_version.rs
src/net/: async_data_channel.rs  data_channel.rs  data_router.rs  end_point.rs  message_router.rs  mod.rs  utils.rs
src/protocol/: growing_buffer.rs  header.rs  in_stream.rs  message.rs  mod.rs  out_stream.rs  protocol_type.rs  request_encoder.rs  response_decoder.rs  utils.rs
src/protocol/message/: cache_create_with_name.rs  common.rs  handshake.rs  mod.rs
tests/: ignite_client_test.rs
tests/cfg/: default.xml
tests/utils/: ignite_node.rs  mod.rs
