[package]
name = "ignite-rust"
version = "0.1.0"
authors = ["Igor Sapego <igorsapg@gmail.com>"]
edition = '2018'

[dependencies]
log = "0.4.8"
rand = "0.7.3"
paste = "0.1"
tokio = { version = "0.2.17", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["full"] }
bytes = "0.5.4"
futures = "0.3.4"

[dev-dependencies]
env_logger = "0.6.0"

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[features]
test = []

[[bin]]
name = "test_node_launcher"
path = "bin/test_node_launcher.rs"
required-features = ["test"]
